# Camera_Lidar_Calibration

./: README.md  操作指南.md  相机-激光雷达联合标定工具操作指南.docx
data/: cam_corners_1.txt  cam_corners_2.txt  cam_corners_3.txt  cam_corners_4.txt  cam_corners_5.txt  cam_corners_6.txt  cam_points_1.txt  cam_points_2.txt  cam_points_3.txt  cam_points_4.txt  cam_points_5.txt  cam_points_6.txt  extrinsicParams.txt  lidar_corners_1.txt  lidar_corners_2.txt  lidar_corners_3.txt  lidar_corners_4.txt  lidar_corners_5.txt  lidar_corners_6.txt  lidar_points_1.txt  lidar_points_2.txt  lidar_points_3.txt  lidar_points_4.txt  lidar_points_5.txt  lidar_points_6.txt
src/: CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
src/config/: app.yaml  bounds.cfg  ca.cfg
src/include/: CeresPnpError.h  ImageCornersEst.h  LidarCornersEst.h  Optimization.h  README.md  Visualization.h  common.hpp  types.h
src/launch/: cam_lidar.yaml  colored_pointcloud_node161.launch
src/rviz/: colored_pointcloud161.rviz
src/src/: ImageCornersEst.cpp  LidarCornersEst.cpp  Optimization.cpp  Visualization.cpp  livox_cam_calib.cpp
